fix body jumping because of [data-scroll-locked] added to body by shadcn

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,7 +72,6 @@
   }
   body {
     @apply bg-background text-foreground;
-    padding: 2rem;
   }
   input, select, textarea {
     border: 1px solid #ccc;
